Code optimization, clean up.

--- a/shop/templates/shop/admin/statistics.html
+++ b/shop/templates/shop/admin/statistics.html
@@ -69,12 +69,16 @@
         }
     </script>
     <div class="row">
-        <div class="col">
+        <div class="col-6">
             <canvas id="salesChart"></canvas>
+        </div>
+        <div class="col-6">
+            <canvas id="paymentSuccessChart"></canvas>
+        </div>
+        <div class="col-6">
             <canvas id="spendPerCustomerChart"></canvas>
         </div>
-        <div class="col">
-            <canvas id="paymentSuccessChart"></canvas>
+        <div class="col-6">
             <canvas id="paymentMethodChart"></canvas>
         </div>
     </div>
