--- a/shop/templates/admin/shop/app_index.html
+++ b/shop/templates/admin/shop/app_index.html
@@ -19,8 +19,10 @@
   </div>
   <div id="content-statistics">
     <h1>Statistics</h1>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous">
+      </script>
     <form id="filterForm">
       <label for="year">Choose a year:</label>
       <select name="year" id="year"></select>
@@ -96,6 +98,10 @@
         type: "bar",
         options: {
           responsive: true,
+          title: {
+            display: false,
+            text: ''
+          },
         }
       });
       let spendPerCustomerCtx = document.getElementById("spendPerCustomerChart").getContext("2d");
@@ -103,6 +109,10 @@
         type: "line",
         options: {
           responsive: true,
+          title: {
+            display: false,
+            text: ''
+          },
         }
       });
       let paymentSuccessCtx = document.getElementById("paymentSuccessChart").getContext("2d");
@@ -110,6 +120,10 @@
         type: "pie",
         options: {
           responsive: true,
+          title: {
+            display: false,
+            text: ''
+          },
           layout: {
             padding: {
               left: 0,
@@ -125,6 +139,10 @@
         type: "pie",
         options: {
           responsive: true,
+          title: {
+            display: false,
+            text: ''
+          },
           layout: {
             padding: {
               left: 0,
