--- a/shop/templates/admin/statistics.html
+++ b/shop/templates/admin/statistics.html
@@ -2,8 +2,12 @@
 
 {% extends "admin/base_site.html" %}
 {% block content %}
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
+<script
+    src="https://code.jquery.com/jquery-3.6.4.min.js"
+    integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
+    crossorigin="anonymous">
+</script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-v4-grid-only@1.0.0/dist/bootstrap-grid.min.css">
 <form id="filterForm">
   <label for="year">Choose a year:</label>
@@ -90,6 +94,10 @@
     type: "bar",
     options: {
       responsive: true,
+        title: {
+            display: false,
+            text: ''
+        }
     }
   });
   let spendPerCustomerCtx = document.getElementById("spendPerCustomerChart").getContext("2d");
@@ -97,6 +105,10 @@
     type: "line",
     options: {
       responsive: true,
+        title: {
+            display: false,
+            text: ''
+        }
     }
   });
   let paymentSuccessCtx = document.getElementById("paymentSuccessChart").getContext("2d");
@@ -104,6 +116,12 @@
     type: "pie",
     options: {
       responsive: true,
+      maintainAspectRatio: false,
+      aspectRatio: 1,
+      title: {
+        display: false,
+        text: ''
+      },
       layout: {
         padding: {
           left: 0,
@@ -119,6 +137,12 @@
     type: "pie",
     options: {
       responsive: true,
+      maintainAspectRatio: false,
+      aspectRatio: 1,
+      title: {
+        display: false,
+        text: ''
+      },
       layout: {
         padding: {
           left: 0,
