--- a/shop/templates/admin/statistics.html
+++ b/shop/templates/admin/statistics.html
@@ -1,12 +1,10 @@
-<!-- shop/templates/admin/statistics.html -->
-
 {% extends "admin/base_site.html" %}
 {% block content %}
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
 <script
-    src="https://code.jquery.com/jquery-3.6.4.min.js"
-    integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
-    crossorigin="anonymous">
+  src="https://code.jquery.com/jquery-3.6.4.min.js"
+  integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
+  crossorigin="anonymous">
 </script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-v4-grid-only@1.0.0/dist/bootstrap-grid.min.css">
 <form id="filterForm">
@@ -95,8 +93,8 @@
     options: {
       responsive: true,
         title: {
-            display: false,
-            text: ''
+          display: false,
+          text: ""
         }
     }
   });
@@ -106,8 +104,8 @@
     options: {
       responsive: true,
         title: {
-            display: false,
-            text: ''
+          display: false,
+          text: ""
         }
     }
   });
@@ -120,7 +118,7 @@
       aspectRatio: 1,
       title: {
         display: false,
-        text: ''
+        text: ""
       },
       layout: {
         padding: {
@@ -141,7 +139,7 @@
       aspectRatio: 1,
       title: {
         display: false,
-        text: ''
+        text: ""
       },
       layout: {
         padding: {
