--- a/shop/templates/admin/shop/app_index.html
+++ b/shop/templates/admin/shop/app_index.html
@@ -20,9 +20,11 @@
   <div id="content-statistics">
     <h1>Statistics</h1>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
-      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous">
-      </script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.4.min.js"
+      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
+      crossorigin="anonymous">
+    </script>
     <form id="filterForm">
       <label for="year">Choose a year:</label>
       <select name="year" id="year"></select>
@@ -100,7 +102,7 @@
           responsive: true,
           title: {
             display: false,
-            text: ''
+            text: ""
           },
         }
       });
@@ -111,7 +113,7 @@
           responsive: true,
           title: {
             display: false,
-            text: ''
+            text: ""
           },
         }
       });
@@ -122,7 +124,7 @@
           responsive: true,
           title: {
             display: false,
-            text: ''
+            text: ""
           },
           layout: {
             padding: {
@@ -141,7 +143,7 @@
           responsive: true,
           title: {
             display: false,
-            text: ''
+            text: ""
           },
           layout: {
             padding: {
